# fakepostmaster

./: .gitignore  Cargo.toml  README.md
examples/: client.rs  server.rs
libpq-serde-macros/: Cargo.toml
libpq-serde-macros/src/: lib.rs
libpq-serde-types/: Cargo.toml
libpq-serde-types/src/: lib.rs  libpq_types.rs
src/: backend.rs  bytes.rs  frontend.rs  handler.rs  main.rs  message.rs
src/handler/: client.rs  mod.rs  server.rs
src/pglrep/: Cargo.toml
tcpdumps/: tcpdump_connect_no_ssl.txt  tcpdump_create_sub.txt
